hphp/test/zend/good/tests/classes/final_ctor3.php.expectf

Fatal error: Cannot override final method A::A() in %s/final_ctor3.php on line 5
